Projeto Spring Cloud com Eureka , Zuul , e Microservicos

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 	<modules>
 		<module>eurekaserverteste</module>
 		<module>zuulserver</module>
+        <module>customers</module>
+        <module>products</module>
 	</modules>
 
 </project>
