--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ customers/mvnw
 customers/.mvn/wrapper/maven-wrapper.properties
 customers/.mvn/wrapper/maven-wrapper.jar
 customers/.mvn/wrapper/MavenWrapperDownloader.java
+customers/.mvn/
